--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular2-fusioncharts": "^1.0.2-rc.5",
     "core-js": "^2.4.1",
     "echarts": "^3.6.2",
     "jquery": "^3.2.1",
