--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "echarts": "^3.6.2",
+    "google": "^2.1.0",
     "jquery": "^3.2.1",
+    "maps": "^0.3.3",
     "pnotify": "^3.2.1",
     "rxjs": "^5.4.2",
     "semantic-ui": "^2.2.13",
