--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "chart.js": "^2.6.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "chart.js": "^2.7.0",
     "core-js": "^2.4.1",
     "echarts": "^3.6.2",
     "google": "^2.1.0",
     "jquery": "^3.2.1",
     "maps": "^0.3.3",
+    "ng2-charts": "^1.6.0",
     "pnotify": "^3.2.1",
     "rxjs": "^5.4.2",
     "semantic-ui": "^2.2.13",
